preparing for in-memory experiment

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -22,4 +22,4 @@ link_libraries(pthread ${GTEST_LIBRARY} ${ARROW_LIBRARY})
 
 include_directories("${PROJECT_SOURCE_DIR}" "/home/atr/local/include/")
 
-add_executable(benchmark-arrow-cpp ${PROJECT_SOURCE_DIR}/main.cc src/arrow-reader-example.h src/arrow-reader-example.cpp src/common.h src/arrow-writer-example.cpp src/arrow-writer-example.h src/BenchmarkResult.cpp src/BenchmarkResult.h src/arrow-reader.cpp src/arrow-reader.h)
+add_executable(benchmark-arrow-cpp ${PROJECT_SOURCE_DIR}/main.cc src/arrow-reader-example.h src/arrow-reader-example.cpp src/common.h src/arrow-writer-example.cpp src/arrow-writer-example.h src/BenchmarkResult.cpp src/BenchmarkResult.h src/arrow-reader.cpp src/arrow-reader.h src/InMemoryFile.cpp src/InMemoryFile.h)
