--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -9,15 +9,15 @@ set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
 set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_BUILD_TYPE Release) # or debug if you need to use gdb on it.
 
 # Some how g++ has better performance than clang++. Of course I don't know all flags for clang++.
-#set(CMAKE_CXX_COMPILER g++) # or clang++
-set(CMAKE_CXX_COMPILER clang++) # or clang++
+set(CMAKE_CXX_COMPILER g++) # or clang++
+#set(CMAKE_CXX_COMPILER clang++) # or clang++
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Ofast -ffast-math -funroll-loops -march=native") # get crazy here
 #add_compile_options("-std=c++17")
 
