[c++] enable gcc optimizations and clean-up
Signed-off-by: Animesh Trivedi <atrivedi@apache.org>

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -18,15 +18,12 @@ set(CMAKE_BUILD_TYPE Release) # or debug if you need to use gdb on it.
 # Some how g++ has better performance than clang++. Of course I don't know all flags for clang++.
 set(CMAKE_CXX_COMPILER g++) # or clang++
 #set(CMAKE_CXX_COMPILER clang++) # or clang++
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Ofast -ffast-math -funroll-loops -march=native -ggdb") # get crazy here
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2 -Ofast -ffast-math -funroll-loops -march=native") # get crazy here
 #add_compile_options("-std=c++17")
-
-set(CMAKE_CXX_FLAGS "-O0  -ggdb")
+#set(CMAKE_CXX_FLAGS "-O0  -ggdb")
 
 find_library(ARROW_LIBRARY arrow HINTS /home/atr/local/lib)
-#find_library(GTEST_LIBRARY gtest HINTS /home/atr/local/lib)
 
-#link_libraries(pthread ${GTEST_LIBRARY} ${ARROW_LIBRARY})
 link_libraries(pthread ${ARROW_LIBRARY})
 
 include_directories("${PROJECT_SOURCE_DIR}" "/home/atr/local/include/")
